refactor: simplify RAG module with minimalist architecture
Streamline the RAG module by removing redundant abstraction layers:
- Remove JpaIDocumentChunkRepository and DocumentChunkEntity, unify chunk persistence to PgVectorAdapter
- Remove JpaIDocumentRepository wrapper, keep SpringDataDocumentRepository direct
- Extract ChunkRowMapper as independent class for testability
- Split RagApplicationService into DocumentUploadService and DocumentSearchService
- Simplify Document domain model (remove service-level concerns)
- Simplify DocumentId value object
- Move StreamingService to common package to eliminate cross-context dependency
- Update and remove redundant tests

References:
- [Spring Data JPA Repositories: Best Practices](https://protsenko.dev/spring-data-jpa-best-practices-repositories-design-guide/)
- [DDD Aggregates - Encapsulating Business Logic](https://buildsimple.substack.com/p/gen-5-ddd-aggregates-encapsulating)

Co-authored-by: Cursor <cursoragent@cursor.com>