@@ -1,7 +1,6 @@
 package com.ai.rag.infrastructure.vector;
 
 import com.ai.rag.domain.model.DocumentChunk;
-import com.ai.rag.infrastructure.vector.PgVectorAdapter;
 import com.ai.rag.domain.vo.DocumentId;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -13,13 +12,11 @@ import org.springframework.jdbc.core.RowMapper;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.time.Instant;
 import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
-import static org.mockito.AdditionalMatchers.*;
 
 @DisplayName("PgVectorAdapter Tests")
 class PgVectorAdapterTest {
@@ -35,374 +32,103 @@ class PgVectorAdapterTest {
         pgVectorAdapter = new PgVectorAdapter(jdbcTemplate, objectMapper);
     }
 
-    private DocumentChunk createTestChunk(DocumentId id, DocumentId documentId, String content) {
-        Map<String, Object> metadata = new HashMap<>();
-        metadata.put("source", "test");
-        return DocumentChunk.create(id, documentId, content, 0, metadata);
-    }
-
-    private DocumentChunk createTestChunkWithEmbedding(DocumentId id, DocumentId documentId, String content, float[] embedding) {
-        Map<String, Object> metadata = new HashMap<>();
-        metadata.put("source", "test");
-        return DocumentChunk.create(id, documentId, content, 0, metadata).withEmbedding(embedding);
-    }
-
     @Nested
-    @DisplayName("Search Tests")
-    class SearchTests {
+    @DisplayName("Search")
+    class Search {
 
         @Test
-        @DisplayName("should return empty list when no results found")
-        void shouldReturnEmptyList_whenNoResultsFound() {
-            // Given
-            float[] queryEmbedding = {0.1f, 0.2f, 0.3f};
-            int topK = 5;
-            when(jdbcTemplate.query(anyString(), any(Object[].class), any(RowMapper.class)))
+        @DisplayName("should return empty list when no results")
+        void shouldReturnEmptyList() {
+            when(jdbcTemplate.query(anyString(), any(RowMapper.class), any(Object[].class)))
                     .thenReturn(Collections.emptyList());
-
-            // When
-            List<DocumentChunk> result = pgVectorAdapter.search(queryEmbedding, topK);
-
-            // Then
-            assertThat(result).isEmpty();
-            verify(jdbcTemplate).query(
-                    contains("SELECT"),
-                    eq(new Object[]{"[0.1,0.2,0.3]", topK}),
-                    any(RowMapper.class)
-            );
+            assertThat(pgVectorAdapter.search(new float[]{0.1f, 0.2f}, 5)).isEmpty();
         }
 
         @Test
-        @DisplayName("should return chunks when results found")
-        void shouldReturnChunks_whenResultsFound() {
-            // Given
-            float[] queryEmbedding = {0.1f, 0.2f, 0.3f};
-            int topK = 5;
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId docId = DocumentId.generate();
-            String content = "Test content";
-            float[] embedding = {0.1f, 0.2f, 0.3f};
-
-            DocumentChunk expectedChunk = createTestChunkWithEmbedding(chunkId, docId, content, embedding);
-
-            when(jdbcTemplate.query(anyString(), any(Object[].class), any(RowMapper.class)))
-                    .thenReturn(List.of(expectedChunk));
-
-            // When
-            List<DocumentChunk> result = pgVectorAdapter.search(queryEmbedding, topK);
-
-            // Then
-            assertThat(result).hasSize(1);
-            assertThat(result.get(0).getContent()).isEqualTo(content);
-        }
-
-        @Test
-        @DisplayName("should filter by document IDs when provided")
-        void shouldFilterByDocumentIds_whenProvided() {
-            // Given
-            float[] queryEmbedding = {0.1f, 0.2f, 0.3f};
-            int topK = 5;
-            List<UUID> docIds = List.of(DocumentId.generate().value(), DocumentId.generate().value());
-
-            when(jdbcTemplate.query(anyString(), any(Object[].class), any(RowMapper.class)))
+        @DisplayName("should filter by document IDs")
+        void shouldFilterByDocumentIds() {
+            when(jdbcTemplate.query(anyString(), any(RowMapper.class), any(Object[].class)))
                     .thenReturn(Collections.emptyList());
-
-            // When
-            List<DocumentChunk> result = pgVectorAdapter.search(queryEmbedding, topK, docIds);
-
-            // Then
-            assertThat(result).isEmpty();
-            verify(jdbcTemplate).query(
-                    contains("WHERE document_id = ANY"),
-                    any(Object[].class),
-                    any(RowMapper.class)
-            );
+            List<UUID> docIds = List.of(UUID.randomUUID());
+            pgVectorAdapter.search(new float[]{0.1f}, 5, docIds);
+            verify(jdbcTemplate).query(contains("WHERE document_id = ANY"),
+                    any(RowMapper.class), any(Object[].class));
         }
 
         @Test
-        @DisplayName("should use simple search when document IDs is empty")
-        void shouldUseSimpleSearch_whenDocumentIdsIsEmpty() {
-            // Given
-            float[] queryEmbedding = {0.1f, 0.2f, 0.3f};
-            int topK = 5;
-            List<UUID> docIds = Collections.emptyList();
-
-            when(jdbcTemplate.query(anyString(), any(Object[].class), any(RowMapper.class)))
+        @DisplayName("should use simple search when docIds is empty")
+        void shouldUseSimpleSearchWhenDocIdsIsEmpty() {
+            when(jdbcTemplate.query(anyString(), any(RowMapper.class), any(Object[].class)))
                     .thenReturn(Collections.emptyList());
-
-            // When
-            List<DocumentChunk> result = pgVectorAdapter.search(queryEmbedding, topK, docIds);
-
-            // Then
-            assertThat(result).isEmpty();
-            verify(jdbcTemplate).query(
-                    not(contains("WHERE document_id = ANY")),
-                    any(Object[].class),
-                    any(RowMapper.class)
-            );
-        }
-
-        @Test
-        @DisplayName("should use simple search when document IDs is null")
-        void shouldUseSimpleSearch_whenDocumentIdsIsNull() {
-            // Given
-            float[] queryEmbedding = {0.1f, 0.2f, 0.3f};
-            int topK = 5;
-
-            when(jdbcTemplate.query(anyString(), any(Object[].class), any(RowMapper.class)))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            List<DocumentChunk> result = pgVectorAdapter.search(queryEmbedding, topK, null);
-
-            // Then
-            assertThat(result).isEmpty();
-            verify(jdbcTemplate).query(
-                    not(contains("WHERE document_id = ANY")),
-                    any(Object[].class),
-                    any(RowMapper.class)
-            );
+            pgVectorAdapter.search(new float[]{0.1f}, 5, List.of());
+            verify(jdbcTemplate, atLeastOnce()).query(contains("SELECT"),
+                    any(RowMapper.class), any(Object[].class));
         }
     }
 
     @Nested
-    @DisplayName("SaveChunk Tests")
-    class SaveChunkTests {
+    @DisplayName("SaveChunk")
+    class SaveChunk {
 
         @Test
-        @DisplayName("should save chunk successfully")
-        void shouldSaveChunk_successfully() {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
-            String content = "Test content";
-            float[] embedding = {0.1f, 0.2f, 0.3f};
-            DocumentChunk chunk = createTestChunkWithEmbedding(chunkId, documentId, content, embedding);
-
+        @DisplayName("should save chunk with embedding")
+        void shouldSaveChunk() {
+            DocumentChunk chunk = DocumentChunk.create(
+                    DocumentId.generate(), DocumentId.generate(), "content", 0, Map.of())
+                    .withEmbedding(new float[]{0.1f, 0.2f});
             when(jdbcTemplate.update(anyString(), any(Object[].class))).thenReturn(1);
-
-            // When
             pgVectorAdapter.saveChunk(chunk);
-
-            // Then - verify SQL contains parameterized metadata with ::jsonb cast
-            verify(jdbcTemplate).update(
-                    argThat(sql -> sql.contains("::jsonb")),
-                    any(Object[].class)
-            );
+            verify(jdbcTemplate).update(contains("::jsonb"), any(Object[].class));
         }
 
         @Test
-        @DisplayName("should save chunk with null metadata")
-        void shouldSaveChunk_withNullMetadata() {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
-            String content = "Test content";
-            float[] embedding = {0.5f, 0.6f};
-            DocumentChunk chunk = DocumentChunk.create(chunkId, documentId, content, 0, null)
-                    .withEmbedding(embedding);
-
+        @DisplayName("should handle null metadata")
+        void shouldHandleNullMetadata() {
+            DocumentChunk chunk = DocumentChunk.create(
+                    DocumentId.generate(), DocumentId.generate(), "content", 0, null)
+                    .withEmbedding(new float[]{0.1f});
             when(jdbcTemplate.update(anyString(), any(Object[].class))).thenReturn(1);
-
-            // When
             pgVectorAdapter.saveChunk(chunk);
-
-            // Then - verify SQL uses parameterized query
-            verify(jdbcTemplate).update(
-                    argThat(sql -> sql.contains("::jsonb")),
-                    any(Object[].class)
-            );
-        }
-
-        @Test
-        @DisplayName("should save chunk with empty metadata")
-        void shouldSaveChunk_withEmptyMetadata() {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
-            String content = "Test content";
-            float[] embedding = {1.0f};
-            DocumentChunk chunk = DocumentChunk.create(chunkId, documentId, content, 0, Collections.emptyMap())
-                    .withEmbedding(embedding);
-
-            when(jdbcTemplate.update(anyString(), any(Object[].class))).thenReturn(1);
-
-            // When
-            pgVectorAdapter.saveChunk(chunk);
-
-            // Then - verify SQL uses parameterized query
-            verify(jdbcTemplate).update(
-                    argThat(sql -> sql.contains("::jsonb")),
-                    any(Object[].class)
-            );
-        }
-
-        @Test
-        @DisplayName("should use parameterized query for metadata")
-        void shouldUseParameterizedQuery_forMetadata() throws Exception {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
-            String content = "Test";
-            float[] embedding = {0.1f};
-            Map<String, Object> metadata = new HashMap<>();
-            metadata.put("quote", "O'Reilly");
-            DocumentChunk chunk = DocumentChunk.create(chunkId, documentId, content, 0, metadata)
-                    .withEmbedding(embedding);
-
-            when(jdbcTemplate.update(anyString(), any(Object[].class))).thenReturn(1);
-
-            // When
-            pgVectorAdapter.saveChunk(chunk);
-
-            // Then - verify SQL uses parameterized query with ::jsonb cast
-            verify(jdbcTemplate).update(
-                    argThat(sql -> sql.contains("::jsonb")),
-                    any(Object[].class)
-            );
+            verify(jdbcTemplate).update(anyString(), any(Object[].class));
         }
     }
 
     @Nested
-    @DisplayName("ArrayToPostgresString Tests")
-    class ArrayToPostgresStringTests {
-
-        @Test
-        @DisplayName("should convert float array to postgres string")
-        void shouldConvertFloatArray_toPostgresString() throws Exception {
-            // Given
-            float[] embedding = {0.1f, -0.2f, 0.3f, 1.0f};
-
-            // When
-            String result = invokePrivateStringMethod("arrayToPostgresString", float[].class, embedding);
-
-            // Then
-            assertThat(result).isEqualTo("[0.1,-0.2,0.3,1.0]");
-        }
-
-        @Test
-        @DisplayName("should handle single element array")
-        void shouldHandleSingleElementArray() throws Exception {
-            // Given
-            float[] embedding = {0.5f};
-
-            // When
-            String result = invokePrivateStringMethod("arrayToPostgresString", float[].class, embedding);
-
-            // Then
-            assertThat(result).isEqualTo("[0.5]");
-        }
-
-        @Test
-        @DisplayName("should handle empty array")
-        void shouldHandleEmptyArray() throws Exception {
-            // Given
-            float[] embedding = {};
-
-            // When
-            String result = invokePrivateStringMethod("arrayToPostgresString", float[].class, embedding);
-
-            // Then
-            assertThat(result).isEqualTo("[]");
-        }
-    }
-
-    @Nested
-    @DisplayName("MetadataToJson Tests")
-    class MetadataToJsonTests {
-
-        @Test
-        @DisplayName("should convert metadata to JSON string")
-        void shouldConvertMetadata_toJsonString() throws Exception {
-            // Given
-            Map<String, Object> metadata = new HashMap<>();
-            metadata.put("key", "value");
-            metadata.put("number", 42);
-
-            // When
-            String result = invokePrivateStringMethod("serializeMetadata", Map.class, metadata);
-
-            // Then
-            assertThat(result).contains("key");
-            assertThat(result).contains("value");
-            assertThat(result).contains("42");
-        }
-
-        @Test
-        @DisplayName("should return NULL for null metadata")
-        void shouldReturnNull_forNullMetadata() throws Exception {
-            // When
-            String result = invokePrivateStringMethod("serializeMetadata", Map.class, (Object) null);
-
-            // Then
-            assertThat(result).isNull();
-        }
-
-        @Test
-        @DisplayName("should return NULL for empty metadata")
-        void shouldReturnNull_forEmptyMetadata() throws Exception {
-            // Given
-            Map<String, Object> metadata = Collections.emptyMap();
-
-            // When
-            String result = invokePrivateStringMethod("serializeMetadata", Map.class, metadata);
-
-            // Then
-            assertThat(result).isNull();
-        }
-
-        @Test
-        @DisplayName("should return NULL when JSON serialization fails")
-        void shouldReturnNull_whenJsonSerializationFails() throws Exception {
-            // Given
-            ObjectMapper failingMapper = new ObjectMapper();
-            PgVectorAdapter adapterWithFailingMapper = new PgVectorAdapter(jdbcTemplate, failingMapper);
-            Map<String, Object> metadata = new HashMap<>();
-            metadata.put("circular", new CircularReference());
-
-            // When
-            String result = invokePrivateStringMethod(adapterWithFailingMapper, "serializeMetadata", Map.class, metadata);
-
-            // Then
-            assertThat(result).isNull();
-        }
-    }
-
-    @Nested
-    @DisplayName("ChunkRowMapper Tests")
+    @DisplayName("ChunkRowMapper")
     class ChunkRowMapperTests {
+
+        private ChunkRowMapper rowMapper;
+
+        @BeforeEach
+        void setUp() {
+            rowMapper = new ChunkRowMapper(objectMapper);
+        }
 
         @Test
         @DisplayName("should map result set to document chunk")
-        void shouldMapResultSet_toDocumentChunk() throws SQLException {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
+        void shouldMapResultSet() throws SQLException {
+            UUID chunkId = UUID.randomUUID();
+            UUID docId = UUID.randomUUID();
             String content = "Test content";
-            int chunkIndex = 1;
             String embedding = "[0.1,0.2,0.3]";
             String metadata = "{\"source\":\"test\"}";
             String createdAt = "2024-01-01T00:00:00Z";
 
             ResultSet rs = mock(ResultSet.class);
-            when(rs.getString("id")).thenReturn(chunkId.value().toString());
-            when(rs.getString("document_id")).thenReturn(documentId.value().toString());
+            when(rs.getString("id")).thenReturn(chunkId.toString());
+            when(rs.getString("document_id")).thenReturn(docId.toString());
             when(rs.getString("content")).thenReturn(content);
-            when(rs.getInt("chunk_index")).thenReturn(chunkIndex);
+            when(rs.getInt("chunk_index")).thenReturn(1);
             when(rs.getString("embedding")).thenReturn(embedding);
             when(rs.getString("metadata")).thenReturn(metadata);
             when(rs.getString("created_at")).thenReturn(createdAt);
 
-            PgVectorAdapter.ChunkRowMapper rowMapper = new PgVectorAdapter.ChunkRowMapper(objectMapper);
-
-            // When
             DocumentChunk result = rowMapper.mapRow(rs, 0);
 
-            // Then
-            assertThat(result.getId()).isEqualTo(chunkId);
-            assertThat(result.getDocumentId()).isEqualTo(documentId);
+            assertThat(result.getId().value()).isEqualTo(chunkId);
+            assertThat(result.getDocumentId().value()).isEqualTo(docId);
             assertThat(result.getContent()).isEqualTo(content);
-            assertThat(result.getChunkIndex()).isEqualTo(chunkIndex);
+            assertThat(result.getChunkIndex()).isEqualTo(1);
             assertThat(result.getEmbedding()).containsExactly(0.1f, 0.2f, 0.3f);
             assertThat(result.getMetadata()).containsEntry("source", "test");
         }
@@ -410,93 +136,79 @@ class PgVectorAdapterTest {
         @Test
         @DisplayName("should handle null embedding")
         void shouldHandleNullEmbedding() throws SQLException {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
             ResultSet rs = mock(ResultSet.class);
-            when(rs.getString("id")).thenReturn(chunkId.value().toString());
-            when(rs.getString("document_id")).thenReturn(documentId.value().toString());
+            when(rs.getString("id")).thenReturn(UUID.randomUUID().toString());
+            when(rs.getString("document_id")).thenReturn(UUID.randomUUID().toString());
             when(rs.getString("content")).thenReturn("Test");
             when(rs.getInt("chunk_index")).thenReturn(0);
             when(rs.getString("embedding")).thenReturn(null);
             when(rs.getString("metadata")).thenReturn(null);
-            when(rs.getString("created_at")).thenReturn(null);
+            when(rs.getString("created_at")).thenReturn("2024-01-01T00:00:00Z");
 
-            PgVectorAdapter.ChunkRowMapper rowMapper = new PgVectorAdapter.ChunkRowMapper(objectMapper);
-
-            // When
             DocumentChunk result = rowMapper.mapRow(rs, 0);
-
-            // Then
             assertThat(result.getEmbedding()).isEmpty();
         }
 
         @Test
-        @DisplayName("should handle empty embedding string")
-        void shouldHandleEmptyEmbeddingString() throws SQLException {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
+        @DisplayName("should handle empty metadata")
+        void shouldHandleEmptyMetadata() throws SQLException {
             ResultSet rs = mock(ResultSet.class);
-            when(rs.getString("id")).thenReturn(chunkId.value().toString());
-            when(rs.getString("document_id")).thenReturn(documentId.value().toString());
-            when(rs.getString("content")).thenReturn("Test");
-            when(rs.getInt("chunk_index")).thenReturn(0);
-            when(rs.getString("embedding")).thenReturn("");
-            when(rs.getString("metadata")).thenReturn(null);
-            when(rs.getString("created_at")).thenReturn(null);
-
-            PgVectorAdapter.ChunkRowMapper rowMapper = new PgVectorAdapter.ChunkRowMapper(objectMapper);
-
-            // When
-            DocumentChunk result = rowMapper.mapRow(rs, 0);
-
-            // Then
-            assertThat(result.getEmbedding()).isEmpty();
-        }
-
-        @Test
-        @DisplayName("should use current time when created_at is null")
-        void shouldUseCurrentTime_whenCreatedAtIsNull() throws SQLException {
-            // Given
-            DocumentId chunkId = DocumentId.generate();
-            DocumentId documentId = DocumentId.generate();
-            ResultSet rs = mock(ResultSet.class);
-            when(rs.getString("id")).thenReturn(chunkId.value().toString());
-            when(rs.getString("document_id")).thenReturn(documentId.value().toString());
+            when(rs.getString("id")).thenReturn(UUID.randomUUID().toString());
+            when(rs.getString("document_id")).thenReturn(UUID.randomUUID().toString());
             when(rs.getString("content")).thenReturn("Test");
             when(rs.getInt("chunk_index")).thenReturn(0);
             when(rs.getString("embedding")).thenReturn("[0.1]");
-            when(rs.getString("metadata")).thenReturn(null);
-            when(rs.getString("created_at")).thenReturn(null);
+            when(rs.getString("metadata")).thenReturn("{}");
+            when(rs.getString("created_at")).thenReturn("2024-01-01T00:00:00Z");
 
-            Instant beforeTest = Instant.now();
-            PgVectorAdapter.ChunkRowMapper rowMapper = new PgVectorAdapter.ChunkRowMapper(objectMapper);
-
-            // When
             DocumentChunk result = rowMapper.mapRow(rs, 0);
-
-            // Then
-            assertThat(result.getCreatedAt()).isAfterOrEqualTo(beforeTest);
+            assertThat(result.getMetadata()).isEmpty();
         }
 
+        @Test
+        @DisplayName("should handle invalid metadata JSON gracefully")
+        void shouldHandleInvalidMetadata() throws SQLException {
+            ResultSet rs = mock(ResultSet.class);
+            when(rs.getString("id")).thenReturn(UUID.randomUUID().toString());
+            when(rs.getString("document_id")).thenReturn(UUID.randomUUID().toString());
+            when(rs.getString("content")).thenReturn("Test");
+            when(rs.getInt("chunk_index")).thenReturn(0);
+            when(rs.getString("embedding")).thenReturn("[0.1]");
+            when(rs.getString("metadata")).thenReturn("invalid json {");
+            when(rs.getString("created_at")).thenReturn("2024-01-01T00:00:00Z");
+
+            DocumentChunk result = rowMapper.mapRow(rs, 0);
+            assertThat(result.getMetadata()).isEmpty();
+        }
     }
 
-    // Helper method to invoke private methods via reflection
-    private String invokePrivateStringMethod(String methodName, Class<?> paramType, Object param) throws Exception {
-        var method = PgVectorAdapter.class.getDeclaredMethod(methodName, paramType);
-        method.setAccessible(true);
-        return (String) method.invoke(pgVectorAdapter, param);
+    @Nested
+    @DisplayName("findChunksByDocumentId")
+    class FindChunksByDocumentId {
+
+        @Test
+        @DisplayName("should find chunks by document ID")
+        void shouldFindChunksByDocumentId() {
+            DocumentId docId = DocumentId.generate();
+            when(jdbcTemplate.query(anyString(), any(RowMapper.class), any(UUID.class)))
+                    .thenReturn(List.of());
+            pgVectorAdapter.findChunksByDocumentId(docId);
+            verify(jdbcTemplate).query(contains("WHERE document_id = ?"),
+                    any(RowMapper.class), eq(docId.value()));
+        }
     }
 
-    private String invokePrivateStringMethod(PgVectorAdapter adapter, String methodName, Class<?> paramType, Object param) throws Exception {
-        var method = PgVectorAdapter.class.getDeclaredMethod(methodName, paramType);
-        method.setAccessible(true);
-        return (String) method.invoke(adapter, param);
-    }
+    @Nested
+    @DisplayName("deleteChunksByDocumentId")
+    class DeleteChunksByDocumentId {
 
-    // Helper class for testing JSON serialization failure
-    private static class CircularReference {
-        private final CircularReference self = this;
+        @Test
+        @DisplayName("should delete chunks by document ID")
+        void shouldDeleteChunksByDocumentId() {
+            DocumentId docId = DocumentId.generate();
+            when(jdbcTemplate.update(anyString(), any(UUID.class))).thenReturn(1);
+            pgVectorAdapter.deleteChunksByDocumentId(docId);
+            verify(jdbcTemplate).update(contains("DELETE FROM"), eq(docId.value()));
+        }
     }
 }
